fix: fix overflow long name

--- a/singolo2.css
+++ b/singolo2.css
@@ -142,6 +142,7 @@ h3 {
 }
 
 .about-us__column {
+    width: 310px;
     display: flex;
     flex-flow: column;
 }
@@ -161,7 +162,9 @@ h3 {
     font-weight: 900;
     font-size: 19.3px;
     letter-spacing: -0.7px;
+    white-space: nowrap;
     text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .about-us__name-text {
